correct left/right alignment of node #content on front page and #footer per mockup comparisons

--- a/css/altres.css
+++ b/css/altres.css
@@ -332,7 +332,7 @@ body.not-front #primary-links a, body.not-front #primary-links a:link, body.not-
 	font-size: 10px;
 	line-height: 17px;
 	color: #FFFFFF;
-	margin-top: 10px;
+	margin: 10px 26px 0 30px;
 	padding-bottom: 100px;
 }
 
@@ -408,6 +408,8 @@ body.front #main {
 #node-37 {
 	position: relative;
 	top: -10px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 
